Attempt to fix firefox bug: * Removed overflow:auto form style.css. * Added <br clear="all" /> to tempalte.html as the last element of the #content div.
git-svn-id: https://journa-list.googlecode.com/svn/trunk@120 dbcfc70c-e32f-0410-8862-5d2c5c102a8f

--- a/jl/web/style.css
+++ b/jl/web/style.css
@@ -152,7 +152,6 @@ body, #menu, #head {
 
 #content #contenthead {
   clear:both;
-  overflow:auto;
   width:100%;
   margin:0 0 10px 0;
 }
